Same for brink I did for bf3

--- a/defaults.cfg
+++ b/defaults.cfg
@@ -3,7 +3,7 @@
 MAINTENANCE = False
 MAIL_SERVER = '127.0.0.1'
 ERROR_MAIL_SENDER = 'server-error@localhost'
-ERROR_MAIL_SUBJECT = 'BF3 News Aggregator failed'
+ERROR_MAIL_SUBJECT = 'Brink News Aggregator failed'
 ADMINS = ['root@localhost']
-FORUM_URL = 'http://forums.electronicarts.co.uk/'
-FORUM_ID = 419
+FORUM_URL = 'http://www.splashdamage.com/forums/'
+FORUM_ID = 18
